# Shelly.hs

./: .gitignore  .project-settings.yml  .travis.yml  ChangeLog.md  LICENSE  README.md  Session.vim  Shellish.hs  Shelly.hs  cabal.haskell-ci  shellish.cabal  shelly.cabal  shelly.cabal.orig  stack.yaml
.github/workflows/: haskell-ci.yml  mac-win-ci.yml  stack.yml
Shelly/: Base.hs  Find.hs  Pipe.hs
doc/: shell-typed.markdown  shelly-monad.markdown
examples/: ExampleFromHenry.lhs  ExampleFromREADME.hs
examples/Pipe/: Log.hs  Pictures.hs
shelly-extra/: shelly-extra.cabal
shelly-extra/Shelly/: Background.hs  Conduit.hs  Extra.hs
shelly-extra/test/: main.hs
src/: Shelly.hs  Shelly.hs.orig
src/Shelly/: Base.hs  Directory.hs  Find.hs  Lifted.hs  Pipe.hs  Unix.hs
test/: .gitignore  .gitignore.orig  CopySpec.hs  EnvSpec.hs  FailureSpec.hs  FindSpec.hs  LICENSE  MoveSpec.hs  ReadFileSpec.hs  Smoke.hs  WriteSpec.hs  drain  drain.hi  drain.hs  main.hs  shelly-testsuite.cabal  shelly-testsuite.cabal.orig  sleep.hs  testall
test/.hpc/: FindSpec.mix  Help.mix  Main.mix  MoveSpec.mix  ReadFileSpec.mix  WriteSpec.mix
test/.shelly/: 2.txt
test/data/: hello.sh  nonascii.txt  zshrc
test/data/dir/: symlinked_dir
test/examples/: color.hs  drain.hs  run-handles.hs
test/src/: CopySpec.hs  EnvSpec.hs  FailureSpec.hs  FindSpec.hs  Help.hs  LiftedSpec.hs  LogWithSpec.hs  MoveSpec.hs  PipeSpec.hs  PrintCommandsFnSpec.hs  ReadFileSpec.hs  RmSpec.hs  RunSpec.hs  ShowCommandSpec.hs  SshSpec.hs  TestInit.hs  TestMain.hs  WhichSpec.hs  WriteSpec.hs  WriterSpec.hs  drain.hs  drain.sh  printer.sh
