Name:       shellish

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:     0.2.0

Synopsis:    shell-/perl- like (systems) programming in Haskell

Description: The shellisg package provides a single module for convenient
             \"systems\" programming in Haskell, similar in spirit to POSIX
             shells or PERL.
             .
               * Elegance and safety is sacrificed for conciseness and
                 swiss-army-knife-ness.
             .
               * The interface exported by Shellish is thread-safe.
             .
             Overall, the module should help you to get a job done quickly,
             without getting too dirty.

Homepage:            http://repos.mornfall.net/shellish
License:             BSD3
License-file:        LICENSE
Author:              Petr Rockai <me@mornfall.net>
Maintainer:          me@mornfall.net
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.6

-- Extra-source-files:

Library
  -- Modules exported by the library.
  Exposed-modules:     Shellish

  Build-depends: mtl, process, filepath, bytestring, text, base >= 4 && < 5, time, directory,
                 unix-compat

  ghc-options: -Werror -Wall

Executable drain
  main-is: test/drain.hs

source-repository head
  type:     darcs
  location: http://repos.mornfall.net/shellish
