Name:       shelly-extra

Version:     0.2.3
Synopsis:    shelly features that require extra dependencies

Description: A background job implementation for performing tasks in parallel.
             .
             Please see the shelly package. Shelly provides a single module for convenient systems programming in Haskell, similar in spirit to POSIX shells.
             .
             shelly-extra is designed to be a grab bag for functionality that either
             .
               * requires extra dependencies
             .
               * is application specific and not generally applicable
             .


Homepage:            https://github.com/yesodweb/Shelly.hs
License:             BSD3
License-file:        LICENSE
Author:              Greg Weber
Maintainer:          Greg Weber <greg@gregweber.info>
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.8


Library
  Exposed-modules:     Shelly.Background

  Build-depends: base >= 4 && < 5, shelly >= 0.13, SafeSemaphore

  ghc-options: -Wall

test-suite test
    type:           exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: ., test
    ghc-options: -Wall

    Build-depends: base, text, shelly, SafeSemaphore, HUnit

source-repository head
  type:     git
  location: https://github.com/yesodweb/Shelly.hs
